--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the seconds to minutes<br> 
+    What is the seconds to minutes converter?<br>
+    The seconds to minutes converter is a tool that converts seconds to minutes and vice versa.<br>
+    How to calculate seconds to minutes?<br>
+    To calculate seconds to minutes you should use the following formula:<br>
+    1 minute = 60 seconds<br>
+    Why use seconds to minutes converter?<br>
+    The seconds to minutes converter is used in order to convert seconds to minutes and vice versa.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
